# chapa-rust

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  ENDPOINTS.md  README.md  makefile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
chapa-rust/: Cargo.toml
chapa-rust/src/: lib.rs  transaction.rs  types.rs
chapa-rust/tests/: integration_test.rs
examples/: bulk_transfer_and_verify.rs  generate_tx_ref.rs  get_balances.rs  get_banks.rs  get_transactions_and_logs.rs  get_transfers.rs  initialize_transaction.rs  main.rs  swap_currencies.rs  transfer_and_verify.rs  verify_transaction.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/models/: ChapaStructs.rs  bank.rs  chapa_models.rs  direct_charge.rs  mod.rs  payment.rs  response.rs  transaction.rs  transfer.rs
src/utils/: chapa_encrypt.rs  generate_tx_ref.rs  mod.rs
tests/: banks_and_balances_test.rs  direct_charge_test.rs  transaction_test.rs  transfer_test.rs
