[package]
name = "chapa-rust"
version = "0.1.0"
edition = "2024"
description = "Chapa SDK for Rust to integrate Chapa payment gateway into your Rust applications."
authors = [] # TODO: Fill it. 
license = "MIT" 
repository = "https://github.com/Chapa-Et/chapa-rust"
# homepage = "https://github.com/Chapa-Et/chapa-rust" # Link to the project homepage
# documentation = "https://docs.rs/chapa-rust" # Link to the documentation
readme = "README.md"
keywords = ["Chapa", "rust-sdk", "payment", "gateway"] # Tags to help users find your crate
categories = [
    "api-bindings",          
    "asynchronous",        
    "web-programming::http-client",  
    "finance",               
    "development-tools::api",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
