[package]
name = "chapa_rust"
version = "0.1.0"
edition = "2024"
description = "A chapa payment gateway SDK for rust based on tokio and reqwest"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
